editor with text, rewrite LCS in java

--- a/client-ws/client.html
+++ b/client-ws/client.html
@@ -1,5 +1,28 @@
 <html>
   <script src="client.js"></script>
+  <style>
+    .line-text
+    {position : absolute;
+    padding   :  0px;
+    margin    :  0px;
+    background : inherit;
+    border-radius : 0px;
+    border-width  : 0px;
+    font-family   : Fira Code;
+    font-size     : 16px;
+    color         : #DCDCCC;
+    left         : 0;
+    line-height :  normal;
+    user-select : none;
+    top         :  0;
+    }
+
+    .render-line {
+    height : 19px;
+    position: relative;
+    overflow: hidden;
+    }
+  </style>
   <body>
     <div id="root"></div>
   </body>
